Fix z-index on to-top button

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -705,6 +705,7 @@ blockquote {
     border-radius: 5px;
     text-decoration: none;
     font-size: 1.75rem;
+    z-index: 1000;
 }
 
 
